# sigil-search

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
configs/: sigil-search.yaml
crates/sigil-api/: Cargo.toml
crates/sigil-api/src/: es.rs  lib.rs  otlp.rs
crates/sigil-cli/: Cargo.toml
crates/sigil-cli/src/: main.rs  runtime.rs
crates/sigil-cluster/: Cargo.toml
crates/sigil-cluster/src/: catalog.rs  lib.rs  role.rs  shard.rs  transport.rs  wire.rs
crates/sigil-config/: Cargo.toml
crates/sigil-config/src/: lib.rs
crates/sigil-core/: Cargo.toml
crates/sigil-core/src/: lib.rs
crates/sigil-index/: Cargo.toml
crates/sigil-index/src/: lib.rs  tier.rs
crates/sigil-ingest/: Cargo.toml
crates/sigil-ingest/src/: codecs.rs  lib.rs  pipeline.rs  template.rs
crates/sigil-plugin/: Cargo.toml
crates/sigil-plugin/src/: capability.rs  contracts.rs  detector.rs  lib.rs  manifest.rs  registry.rs  version.rs
crates/sigil-query/: Cargo.toml
crates/sigil-query/src/: dsl.rs  lib.rs
crates/sigil-schema/: Cargo.toml
crates/sigil-schema/src/: lib.rs
deploy/: docker-compose.yml  sigil-docker.yaml
docs/: API.md  CONFIGURATION.md  DESIGN.md  OPERATIONS.md  PLUGINS.md  QUERY.md  README.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BarChartH.tsx  DashboardsView.tsx  EventsTable.tsx  FieldSidebar.tsx  Histogram.tsx  Panel.tsx  PanelFormModal.tsx  SearchBar.tsx  SearchView.tsx  StatsView.tsx  ThemeToggle.tsx
frontend/src/lib/: format.ts  query.ts
frontend/src/state/: useDashboards.ts  useHistory.ts  useSearch.ts
samples/: README.md  events.ndjson  generate.py  seed.sh
siem/: Cargo.toml  README.md
siem/crates/siem-alert/: Cargo.toml
siem/crates/siem-alert/src/: lib.rs
siem/crates/siem-cli/: Cargo.toml
siem/crates/siem-cli/src/: main.rs
siem/crates/siem-correlate/: Cargo.toml
siem/crates/siem-correlate/src/: lib.rs
siem/crates/siem-ocsf/: Cargo.toml
siem/crates/siem-ocsf/src/: lib.rs
siem/crates/siem-sigma/: Cargo.toml
siem/crates/siem-sigma/src/: lib.rs
siem/rules/: failed_logins.yml  suspicious_download.yml
