[package]
name = "sigil-cluster"
version = "0.0.0"
edition = "2021"
publish = false
description = "Roles, transport abstraction, Raft catalog, sharding (DESIGN section 5)"

[dependencies]
sigil-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
