[package]
name = "sigil-core"
version = "0.0.0"
edition = "2021"
publish = false
description = "Foundational types and plugin traits for Sigil Search"

# Keep this crate dependency-light: it is the root of the dependency graph and
# defines the stable contract that plugins (and the sigil-siem distro) rely on.
[dependencies]
