[package]
name = "sigil-index"
version = "0.0.0"
edition = "2021"
publish = false
description = "Own indexer: Tantivy + Arrow/DataFusion + tiered/object storage (DESIGN section 8)"

[dependencies]
sigil-core = { workspace = true }
tantivy = { workspace = true }
datafusion = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
